# Sirius_C-_projects

Prime_numbers/: CMakeLists.txt  prime.cpp
task_2_kuzmenko/: CMakeLists.txt  coord  main.cpp  parse_arguments.cpp  parse_arguments.h  readfile.cpp  readfile.h  vectorangle.cpp  vectorangle.h
task_4_Kuzmenko/src/: main.cpp
task_4_Kuzmenko/testImage/: Readme.txt
task_5_kuzmenko/: CMakeLists.txt  README.md  list.cpp  list.h  main.cpp  test_file
task_6_kuzmenko/: .gitignore  CMakeLists.txt  Poly.cpp  Poly.h  main.cpp
